tests/snapshots/query_snapshots__declaration_extension_method_meta.snap
---
source: tests/query_snapshots.rs
expression: snapshot
---
name: declaration_extension_method
fixture: complex_scenarios.swift
strategy: Unified
range: "46"
node_type: function_declaration
query: "[query stored in separate _query.snap file]"
