tests/snapshots/query_snapshots__declaration_extension_method_query.snap
---
source: tests/query_snapshots.rs
expression: result.query
---
(class_declaration
  name: (user_type (type_identifier) @name0)
  (#eq? @name0 "ComplexViewModel")
  (class_body
    ((function_declaration
      name: (simple_identifier) @fn_name
      (#eq? @fn_name "specializedAction")) @target)))
