tests/snapshots/query_snapshots__declaration_from_inner_point_query.snap
---
source: tests/query_snapshots.rs
expression: result.query
---
(class_declaration
  (class_body
    (function_declaration
      (function_body
        (statements
          (call_expression
            (call_suffix
              (lambda_literal
                (statements
                  (property_declaration
                    ((value_binding_pattern) @target)))))))))))
