tests/snapshots/query_snapshots__declaration_method_meta.snap
---
source: tests/query_snapshots.rs
expression: snapshot
---
name: declaration_method
strategy: Declaration
range: "27"
node_type: function_declaration
query: "[query stored in .scm file]"
