tests/snapshots/query_snapshots__fine_grained_chained_closures_meta.snap
---
source: tests/query_snapshots.rs
expression: snapshot
---
name: fine_grained_chained_closures
fixture: complex_scenarios.swift
strategy: Unified
range: "33"
node_type: property_declaration
query: "[query stored in separate _query.snap file]"
